bug: Align items using flex instead of inline-block

--- a/blocks/resources/__logo-link/resources__logo-link.css
+++ b/blocks/resources/__logo-link/resources__logo-link.css
@@ -1,4 +1,3 @@
 .resources__logo-link {
-  display: inline-block;
   text-decoration: none;
 }
