--- a/blocks/resources/__logo-zone-item/resources__logo-zone-item.css
+++ b/blocks/resources/__logo-zone-item/resources__logo-zone-item.css
@@ -1,6 +1,5 @@
 .resources__logo-zone-item {
   font-size: 0;
-  display: inline-block;
   margin: 0;
   text-align: center;
 }
